add small fixes